--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+<!-- google fonts font-family: 'Montserrat', sans-serif; -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
+    <!-- font awesome -->
+    <script src="https://use.fontawesome.com/86c245d177.js"></script>
+    <title>Recipies Application</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
